chore: update repository field to proper object format
Changed repository from string to object with type and git+ URL
as recommended by npm standards.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.1",
   "type": "module",
   "description": "oRPC permissions as another layer of abstraction!",
-  "repository": "https://github.com/omar-dulaimi/orpc-shield",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/omar-dulaimi/orpc-shield.git"
+  },
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
