fix: correct package exports and build configuration
- Update TypeScript config to build only src/ directory to dist/ root
- Fix package.json exports to point to correct dist/ paths
- Add files field to ensure proper package publication
- Create separate dev config for tests and development
- Update test paths to match new build structure
- Update ESLint config to include dev tsconfig for test files
- Bump version to 0.0.2

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "orpc-shield",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "type": "module",
   "description": "oRPC permissions as another layer of abstraction!",
   "repository": {
@@ -15,6 +15,7 @@
   },
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
+  "files": ["dist/**/*", "README.md", "LICENSE"],
   "author": {
     "name": "Omar Dulaimi",
     "url": "https://github.com/omar-dulaimi"
@@ -30,7 +31,7 @@
     "prettier": "prettier --ignore-path .gitignore --write --list-different \"**/*.{ts,tsx,yml}\"",
     "lint": "eslint . --ext .ts,.tsx",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
-    "typecheck": "tsc --noEmit",
+    "typecheck": "tsc --noEmit -p tsconfig.dev.json",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
