--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,10 +9,10 @@
     "allowSyntheticDefaultImports": true,
     "importHelpers": true,
     "experimentalDecorators": true,
-    "module": "ES2020",
+    "module": "Node16",
     "target": "ES2020",
     "lib": ["es2019", "DOM"],
-    "moduleResolution": "node",
+    "moduleResolution": "node16",
     "emitDecoratorMetadata": true,
     "sourceMap": true,
     "declaration": true,
