--- a/example/package.json
+++ b/example/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "@examples/express-trpc-shield",
+  "name": "@examples/express-orpc-shield",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "ts-node-dev ./src/server"
+    "predev": "pnpm -C .. run build",
+    "dev": "tsx ./src/server.ts",
+    "prebuild": "pnpm -C .. run build",
+    "build": "tsc",
+    "prestart": "pnpm -C .. run build",
+    "start": "node ./dist/server.js"
   },
   "dependencies": {
-    "@prisma/client": "^4.13.0",
-    "@trpc/server": "^10.23.0",
+    "@orpc/server": "^1.8.5",
+    "@orpc/openapi": "^1.8.5",
     "express": "^4.18.2",
-    "prisma-trpc-generator": "^1.3.0",
-    "prisma-trpc-shield-generator": "0.1.0",
-    "trpc-shield": "^0.4.1",
+    "orpc-shield": "link:..",
     "typescript": "5.0.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
-    "prisma": "^4.13.0",
-    "ts-node-dev": "^2.0.0"
-  },
-  "publishConfig": {
-    "access": "restricted"
+    "tsx": "^4.20.5"
   }
 }
